:sparkles: feat: Remove discount cart
